--- a/index.css
+++ b/index.css
@@ -10,6 +10,8 @@ body{
     background-color: black;
     font-family: 'Press Start 2P', cursive;
     color: blanchedalmond;
+    width:100vw;
+    height:100vh;
 }
 header{
     height: 40vh;
